--- a/src/components/header.css
+++ b/src/components/header.css
@@ -132,12 +132,12 @@
 @media (max-width: 768px) {
 
   .header_container {
-    justify-content: space-between; /* left and right sides */
+    justify-content: space-between; 
     align-items: center;
     padding: 0 1rem;
   }
 
-  /* LEFT: menu toggle + nav */
+  
   .header_left {
     gap: 0.5rem;
   }
@@ -146,7 +146,7 @@
     display: none;
     position: absolute;
     top: 65px;
-    left: 0; /* align dropdown to left */
+    left: 0; 
     background-color: var(--background-color);
     border-radius: 0 0 10px 10px;
     padding: 1rem;
